# linear-regression

./: README.md  pyproject.toml  regression.ipynb  weather.csv
